fix: more-window not responsive

--- a/frontend/src/styles/scss/_navbar.scss
+++ b/frontend/src/styles/scss/_navbar.scss
@@ -11,6 +11,8 @@
     border-right: 0.1px solid var(--border);
 
     .routes {
+        position: relative;
+
         .branding {
             img {
                 height: 40px;
