--- a/frontend/src/styles/scss/index.scss
+++ b/frontend/src/styles/scss/index.scss
@@ -184,27 +184,35 @@ body {
 
 
 .more-window {
-    position: relative;
-    width: 120% !important;
+    position: absolute;
+    width: 10rem !important;
 
     border-radius: 10px !important;
     margin-bottom: -5.1rem;
 
-    bottom: 6rem;
-    left: 0.5rem;
+    bottom: 10rem;
+    left: 1rem;
 
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    padding: 0 !important;
+    padding-block: 0 !important;
     cursor: default !important;
 
+    z-index: 100;
+
+    @include respondAt($mid-width) {
+        left: .6rem;
+        padding-inline: 1rem;
+    }
+
     >* {
-        position: relative;
-        width: 87%;
+        width: inherit;
         font-size: large;
         padding: 10px;
-        padding-inline: 16px;
+        padding-inline: 1rem;
         display: flex;
         cursor: pointer;
         transition: 0.1s ease-in-out;
